--- a/Views/DeleteCategory.xaml
+++ b/Views/DeleteCategory.xaml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IMP_reseni.Views.ModifySupplier"
-              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             x:Class="IMP_reseni.Views.DeleteCategory"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="ModifySupplier">
+             Title="DeleteCategory">
     <ContentPage.Resources>
-        <Converters:IntToBoolConverter x:Key="intToBool" />
-        <toolkit:VariableMultiValueConverter 
-                x:Key="VariableMultiValueConverter"
-                ConditionType="Exact"
-                Count="7" />
+        <Converters:IntToBoolConverter x:Key="intToBool"/>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
             <Setter Property="BorderWidth" Value="1" />
@@ -18,15 +13,8 @@
             <Setter Property="Margin" Value="0,0,0,0"/>
             <Setter Property="CornerRadius"  Value="0"/>
         </Style>
-
-
-        <Style TargetType="Entry">
-            <Setter Property="HorizontalTextAlignment" Value="Center"/>
-            <Setter Property="HorizontalOptions" Value="Center"/>
-            <Setter Property="FontSize" Value="Medium"/>
-        </Style>
-
     </ContentPage.Resources>
+
     <StackLayout Margin="75">
 
         <Border StyleClass="PickerBorder"
@@ -34,8 +22,8 @@
                 >
             <Picker Title="Zvol Kategorii"
                 x:Name="Picker"
-                ItemsSource="{Binding ListOfSupplier}"
-                SelectedItem="{Binding SelectedSupplier}"
+                ItemsSource="{Binding ListOfCategory}"
+                SelectedItem="{Binding SelectedCategory}"
                 HorizontalTextAlignment="Center"
                 FontSize="Large"
                 >
@@ -49,7 +37,7 @@
 
         <Border StyleClass="EntryBorder"
                 Margin="0,60,0,50">
-            <Entry 
+            <Label 
                FontSize="Large"
                x:Name="Entry"
                HorizontalTextAlignment="Center"
@@ -58,7 +46,7 @@
 
         <Button Text="Potvrdit změny"       
                 HorizontalOptions="Center"
-                Command="{Binding ModifyCommand}"
+                Command="{Binding DeleteCommand}"
                 CommandParameter="{Binding Text}">
         </Button>
     </StackLayout>
