--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -237,8 +237,10 @@
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
                                     <Image Grid.Row="0"
-                                   Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}" 
-                                   Aspect="AspectFill" />
+                                           Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}" 
+                                           Aspect="AspectFill" 
+                                           WidthRequest="100"
+                                           HeightRequest="120"/>
 
                                     <Label Grid.Row="1"
                                    Text="{Binding Name}" 
