--- a/Views/ModifyCategory.xaml
+++ b/Views/ModifyCategory.xaml
@@ -45,6 +45,15 @@
                Text="{Binding Text}"/>
         </Border>
 
+        <Button Text="Zobrazit obrázek"       
+                HorizontalOptions="Center"
+                Command="{Binding ShowPictureCommand}"
+                CommandParameter="{Binding SelectedCategory}"/>
+        <Button Text="Změnit obrázek"       
+                HorizontalOptions="Center"
+                Command="{Binding ChangePictureCommand}"
+                CommandParameter="{Binding SelectedCategory}"/>
+        
         <Button Text="Potvrdit změny"       
                 HorizontalOptions="Center"
                 Command="{Binding ModifyCommand}"
