--- a/Views/AddItemToBasket.xaml
+++ b/Views/AddItemToBasket.xaml
@@ -22,7 +22,7 @@
     </ContentPage.Resources>
     <VerticalStackLayout VerticalOptions="Center"
                          Spacing="10">
-        <Image Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}"
+        <Image Source="{Binding ImageUrl, TargetNullValue='question_mark.jpg'}"
                Grid.Column="0"
                Aspect="AspectFill"
                HeightRequest="100"
