--- a/Views/DeleteSubCategory.xaml
+++ b/Views/DeleteSubCategory.xaml
@@ -63,7 +63,7 @@
 
         <Button Text="Potvrdit"
                 HorizontalOptions="Center"
-                Command="{Binding ModifyCommand}"
+                Command="{Binding DeleteCommand}"
                 CommandParameter="{Binding Source={x:Reference Entry},
                                             Path=Text}">
             <Button.IsEnabled>
