--- a/Views/StockUp.xaml
+++ b/Views/StockUp.xaml
@@ -23,7 +23,7 @@
             <ImageButton
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                    Source="arrow_back.svg"
+                    Source="{AppThemeBinding Light=arrow_back_white.png, Dark=arrow_back_dark.png}"
                     HeightRequest="50" WidthRequest="50"
                     Margin="25,0,0,0"
                     Command="{Binding NavigateCollectionCommand}"
